--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>画面いっぱいに背景色</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://yosio11.github.io/sizimi/style.css">
 </head>
 <body>
     <div class="contents">
