--- a/index.html
+++ b/index.html
@@ -20,8 +20,19 @@
         <p>sizimi連合のgoogle meet</p>
         <a href="https://meet.google.com/pxu-awjq-dew">https://meet.google.com/pxu-awjq-dew</a>
         <P>↓おまけ</P>
-        <button>押せるよ～ん</button>
-        <P>作　sizimi</P>
+        <html>
+        <head>
+            <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+            <title></title>
+            <meta charset="utf-8" />
+        </head>
+        <body>
+            <input type="button" value="秘密のボタン" onclick="document.getElementById('output').innerHTML='なにかあるわけでもありません';" /><br />
+            <br />
+            <div id="output"></div>
+        </body>
+        </html>
+        <P>作　佐野 舜</P>
     </div>
 </body>
 </html>        
