--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>画面いっぱいに背景色</title>
+    <title>sizimi連合公式サイト</title>
     <link rel="stylesheet" href="https://yosio11.github.io/sizimi/style.css">
 </head>
 <body>
