--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="https://classroom.google.com/c/NDY5Nzk2NDI4NDM2">https://classroom.google.com/c/NDY5Nzk2NDI4NDM2</a>
         <p>sizimi連合のgoogle meet</p>
         <a href="https://meet.google.com/pxu-awjq-dew">https://meet.google.com/pxu-awjq-dew</a>
-        <img src="https://yosio11.github.io/sizimi/mems.gif" alt="memsの猫" title="宇宙の猫">
+        <img src="https://yosio11.github.io/sizimi/sizimi.png" alt="しじみのロゴ" title="ロゴマーク">
         <P>↓おまけ</P> 
         <head>
             <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
