--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <b>このサイトでは、sizimi同盟の様々な情報を載せていきます！</b>
         <p>更新情報</p>
         <p>2022/04/18　この度、sizimi連合の公式webサイト、開設いたしました！</p>
+        <P>2022/04/19　sizimi連合の本部のロゴを追加しました！</P>
         <P>______________________________________________________________</P>
         <p>sizimi連合関連のURLです。</p>
         <p>sizimi連合本部のgoogle Drive</p>
