--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <b>このサイトでは、sizimi同盟の様々な情報を載せていきます！</b>
         <p>更新情報</p>
-        <p>2022/04/18　この度、sizimi連合の公式webサイト、開設いたしました！</p>
-        <P>2022/04/19　sizimi連合の本部のロゴを追加しました！</P>
+        <p>2022/04/24　sizimi連合の規約書を公開しました！</p>
+        <p>2022/04/19　sizimi連合の本部のロゴを追加しました！</p>
+        <P>2022/04/18　この度、sizimi連合の公式webサイト、開設いたしました！</P>
+        <P>______________________________________________________________</P>
+        <p>sizimi連合規約書</p>
+        <a href="https://yosio11.github.io/sizimi-Terms-of-use/">https://yosio11.github.io/sizimi-Terms-of-use/</a>
         <P>______________________________________________________________</P>
         <p>sizimi連合関連のURLです。</p>
         <p>sizimi連合本部のgoogle Drive</p>
