--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <b>このサイトでは、sizimi同盟の様々な情報を載せていきます！</b>
         <p>更新情報</p>
+        <p>2022/04/25　アクセスした日付と時間がわかるようになりました！</p>
         <p>2022/04/24　sizimi連合の規約書を公開しました！</p>
         <p>2022/04/19　sizimi連合の本部のロゴを追加しました！</p>
         <P>2022/04/18　この度、sizimi連合の公式webサイト、開設いたしました！</P>
