--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="jp">
 <head>
     <meta charset="UTF-8">
@@ -6,10 +7,15 @@
     <link rel="stylesheet" href="https://yosio11.github.io/sizimi/style.css">
 </head>
 <body>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
     <div class="contents">
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
         <h3>更新情報</h3>
+        <p>2022/05/02　googleサイト版 sizimi連合公式webサイト、開設いたしました！</p>
+        <p>2022/05/02　sizimi連合へのご意見、ご質問、ご要望等を承ることができるようになりました！</p>
         <p>2022/05/01　sizimi連合公式webサイトのデザインが大きく変わりました！</p>
         <p>2022/04/30　アクセスしているあなたの端末情報がわかるようになりました！</p>
         <p>2022/04/25　アクセスした日付と時間がわかるようになりました！</p>
@@ -20,6 +26,9 @@
         <h3>sizimi連合の規約書はこちら↓（必ず読んで下さい）</h3>
         <p>sizimi連合規約書</p>
         <a href="https://yosio11.github.io/sizimi-Terms-of-use/">https://yosio11.github.io/sizimi-Terms-of-use/</a>
+        <h3>googleサイト版 sizimi連合公式webサイトはこちらから！</h3>
+        <p>googleサイト版 sizimi連合公式webサイト</p>
+        <a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0</a>
         <h3>sizimi連合関連のURLです。</h3>
         <p>sizimi連合本部のgoogle Drive</p>
         <a href="https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV">https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV</a>
@@ -29,7 +38,7 @@
         <a href="https://meet.google.com/pxu-awjq-dew">https://meet.google.com/pxu-awjq-dew</a>
         <p>sizimi連合チャットルーム</p>
         <a href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA</a>
-        <h3>このサイトにアクセスした日付と時間です↓</h3>
+        <h3>このサイトにアクセスした日付と時間です。</h3>
         <script>//今日の日付データを変数に格納
         //変数は"today"とする
         var today=new Date(); 
@@ -54,7 +63,7 @@
         var second = time.getSeconds();
         
         document.write(hour+"時",+minute+"分"+second+"秒");</script>
-        <h3>このサイトにアクセスしているあなたの端末情報です↓（誰でも開示しているよ）</h3>
+        <h3>このサイトにアクセスしているあなたの端末情報です。（誰でも開示しているよ）</h3>
         <script>
             //端末情報の取得のエリアです
             var a=location.pathname
@@ -83,16 +92,12 @@
         </script>
         <br>
         <script type="text/javascript">alert("ようこそ、sizimi連合公式wedサイトへ！");</script>
-        <p>______________________________________________________________</p>
-        <b>ボタンです↓</b> 
-        <br>
-            <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-            <title></title>
-            <meta charset="utf-8" />
-            <input type="button" value="秘密のボタン" onclick="document.getElementById('output').innerHTML='これはおまけです。';" /><br />
-            <br />
-            <div id="output"></div>
+        <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
+        <h3>sizimi連合へのご意見、ご質問、ご要望等は右下で承ります</h3>
+        <p>Smallchatというチャットシステムを用いて直接制作者とご意見、ご質問、ご要望等を</p>
+        <p>直接承ることができるようになりました！</p>
+        <p>ぜひご利用ください！</p>
         <h4>作　佐野 舜</h4>
     </div>
 </body>
-</html>        
+</html>   
