--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
         <h3>更新情報</h3>
+        <p>2022/05/03　sizimi連合公式webサイトのデザインが真ん中寄りになりました！</p>
         <p>2022/05/02　googleサイト版 sizimi連合公式webサイト、開設いたしました！</p>
         <p>2022/05/02　sizimi連合へのご意見、ご質問、ご要望等を承ることができるようになりました！</p>
         <p>2022/05/01　sizimi連合公式webサイトのデザインが大きく変わりました！</p>
