--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>sizimi連合公式サイト</title>
     <link rel="stylesheet" href="https://yosio11.github.io/sizimi/style.css">
+    <link rel="icon" href="https://yosio11.github.io/sizimi/favicon.ico">
+    <link rel="apple-touch-icon" href="https://yosio11.github.io/sizimi/favicon.ico">
 </head>
 <body>
     <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
+  　<div class="button_line001">
+      <table>
+       <tr>
+       <td><a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">googleサイト版 sizimi連合公式webサイトはこちら</a></td>
+       <td><a href="https://meet.google.com/pxu-awjq-dew">sizimi連合のgoogle meet</a></td>
+       <td><a href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">sizimi連合のチャットルーム</a></td>
+       <td><a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">sizimi連合のgoogle Drive</a></td>
+       </tr>
+       </table>
+    </div>
     <div class="contents">
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
@@ -92,8 +104,8 @@
         //結構強引でしょ
         </script>
         <br>
-        <script type="text/javascript">alert("ようこそ、sizimi連合公式wedサイトへ！");</script>
         <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
+      　<script type="text/javascript">alert("ようこそ、sizimi連合公式wedサイトへ！");</script>
         <h3>sizimi連合へのご意見、ご質問、ご要望等は右下で承ります</h3>
         <p>Smallchatというチャットシステムを用いて直接制作者とご意見、ご質問、ご要望等を</p>
         <p>直接承ることができるようになりました！</p>
@@ -101,4 +113,4 @@
         <h4>作　佐野 舜</h4>
     </div>
 </body>
-</html>   
+</html>
