--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
        <td><a href="https://meet.google.com/pxu-awjq-dew">sizimi連合のgoogle meet</a></td>
        <td><a href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">sizimi連合のチャットルーム</a></td>
        <td><a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">sizimi連合のgoogle Drive</a></td>
+       <td><a href="https://yosio11.github.io/sizimi-Terms-of-use/">sizimi連合規約書</a></td>
        </tr>
        </table>
     </div>
