--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
   　<div class="button_line001">
       <table>
        <tr>
+       <td><img src="https://yosio11.github.io/sizimi/sizimi2.png" alt="しじみのロゴ" title="ロゴマーク"></td>
+       <td><h1>sizimi連合公式webサイト</h1></td>
+       </tr>
+      </table>  
+      <table>
+       <tr>
+       <td><a href="https://yosio11.github.io/sizimi/">Home</a></td>
        <td><a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">googleサイト版 sizimi連合公式webサイトはこちら</a></td>
        <td><a href="https://meet.google.com/pxu-awjq-dew">sizimi連合のgoogle meet</a></td>
        <td><a href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">sizimi連合のチャットルーム</a></td>
-       <td><a href="https://meet.google.com/pxu-awjq-dew">sizimi連合のgoogle Drive</a></td>
-       <td><a href="https://yosio11.github.io/sizimi-Terms-of-use/">sizimi連合規約書</a></td>
+       <td><a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">sizimi連合のgoogle Drive</a>
+       <a href="https://yosio11.github.io/sizimi-Terms-of-use/">sizimi連合規約書</a></td>
        </tr>
        </table>
     </div>
@@ -27,7 +34,6 @@
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
         <h3>更新情報</h3>
-        <p>2022/05/04　sizimi連合関連のwebサイトに上部から移動できるようになりました！</p>
         <p>2022/05/03　sizimi連合公式webサイトのデザインが真ん中寄りになりました！</p>
         <p>2022/05/02　googleサイト版 sizimi連合公式webサイト、開設いたしました！</p>
         <p>2022/05/02　sizimi連合へのご意見、ご質問、ご要望等を承ることができるようになりました！</p>
@@ -105,8 +111,9 @@
         <script>document.write("ブラウザのユーザーエージェント:"+g);
         //結構強引でしょ
         </script>
+        <br>
+        <script type="text/javascript">alert("ようこそ、sizimi連合公式wedサイトへ！");</script>
         <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
-      　<script type="text/javascript">alert("ようこそ、sizimi連合公式wedサイトへ！");</script>
         <h3>sizimi連合へのご意見、ご質問、ご要望等は右下で承ります</h3>
         <p>Smallchatというチャットシステムを用いて直接制作者とご意見、ご質問、ご要望等を</p>
         <p>直接承ることができるようになりました！</p>
