--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
        <td><a href="https://meet.google.com/pxu-awjq-dew">sizimi連合のgoogle meet</a>
            <a href="https://yosio11.github.io/sizimi-Blog/">sizimi連合のブログ</a></td>
        <td><a href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">sizimi連合のチャットルーム</a>
-       <a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">sizimi連合のgoogle Drive</a></td>
+       <a href="https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV">sizimi連合のgoogle Drive</a></td>
        </tr>
        </table>
     </div>
