--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <table>
        <tr>
        <td><img src="https://yosio11.github.io/sizimi/sizimi2.png" alt="しじみのロゴ" title="ロゴマーク"></td>
-       <td><h1>sizimi連合公式webサイト</h1></td>
+       <td><h1>sizimi連合公式webサイト-Home</h1></td>
        </tr>
       </table>
     </div>
