--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="https://yosio11.github.io/sizimi/style.css">
     <link rel="icon" href="https://yosio11.github.io/sizimi/favicon.ico">
     <link rel="apple-touch-icon" href="https://yosio11.github.io/sizimi/favicon.ico">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="https://yosio11.github.io/sizimi-Template/script.js" type="text/javascript"></script>
+    <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
 </head>
 <body>
     <div class="bg"></div>
@@ -20,23 +23,15 @@
        </tr>
       </table>
     </div>
-  　<div class="button_line001">  
-      <table>
-       <tr>
-       <td><a href="https://yosio11.github.io/sizimi/">Home</a></td>
-       <td><a href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">googleサイト版 sizimi連合公式webサイトはこちら</a></td>
-       <td><a href="https://yosio11.github.io/sizimi-Terms-of-use/">sizimi連合規約書</a></td>
-       <td><a href="https://meet.google.com/pxu-awjq-dew">sizimi連合のgoogle meet</a>
-           <a href="https://yosio11.github.io/sizimi-Blog/">sizimi連合のブログ</a></td>
-       <td><a href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">sizimi連合のチャットルーム</a>
-       <a href="https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV">sizimi連合のgoogle Drive</a></td>
-       </tr>
-       </table>
+    <div id="cover">
+      <div id="section1"></div>
+      <div id="section2"></div>
     </div>
     <div class="contents">
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
         <h3>更新情報</h3>
+        <p>2022/05/19　上のsizimi連合関連のリンクを一括編集できるようになりました！</p>
         <p>2022/05/04　sizimi連合関連のリンクが上にも追加しました！</p>
         <p>2022/05/03　sizimi連合公式webサイトのデザインが真ん中寄りになりました！</p>
         <p>2022/05/02　googleサイト版 sizimi連合公式webサイト、開設いたしました！</p>
@@ -116,7 +111,6 @@
         //結構強引でしょ
         </script>
         <br>
-        <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
         <h3>sizimi連合へのご意見、ご質問、ご要望等は右下で承ります</h3>
         <p>Smallchatというチャットシステムを用いて直接制作者とご意見、ご質問、ご要望等を</p>
         <p>直接承ることができるようになりました！</p>
@@ -124,4 +118,4 @@
         <h4>作　佐野 舜</h4>
     </div>
 </body>
-</html>
+</html> 
