--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
        </tr>
       </table>
     </div>
-    <div id="cover"></div>
+    <div id="cover">
+      <div id="section1"></div>
+      <div id="section2"></div>
+    </div>
     <div class="contents">
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
@@ -115,4 +118,4 @@
         <h4>作　佐野 舜</h4>
     </div>
 </body>
-</html> 
+</html>
