--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="https://yosio11.github.io/sizimi/favicon.ico">
     <link rel="apple-touch-icon" href="https://yosio11.github.io/sizimi/favicon.ico">
     <script type="text/javascript" src="http://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script src="https://yosio11.github.io/sizimi-Template/script.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://yosio11.github.io/sizimi-Template/script.js"></script>
     <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
 </head>
 <body>
@@ -23,10 +23,7 @@
        </tr>
       </table>
     </div>
-    <div id="cover">
-      <div id="section1"></div>
-      <div id="section2"></div>
-    </div>
+    <div id="cover"></div>
     <div class="contents">
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
