--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="https://yosio11.github.io/sizimi/style.css">
   <link rel="icon" href="https://yosio11.github.io/sizimi/favicon.ico">
   <link rel="apple-touch-icon" href="https://yosio11.github.io/sizimi/favicon.ico">
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://yosio11.github.io/sizimi-Template/script.js" type="text/javascript"></script>
   <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
 </head>
 
@@ -25,9 +27,12 @@
       </tr>
     </table>
   </div>
-  <object type="text/html" data="https://yosio11.github.io/sizimi-Template/index.html" width="1300" height="140">
-    <p>non object</p>
-  </object>
+  <body>
+    <div id="cover">
+      <div id="section1"></div>
+      <div id="section2"></div>
+    </div>
+  </body>
   <div class="contents">
     <h1>sizimi連合公式webサイトへようこそ！</h1>
     <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
