--- a/index.html
+++ b/index.html
@@ -2,130 +2,140 @@
 <html lang="jp">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sizimi連合公式サイト</title>
-  <link rel="stylesheet" href="https://yosio11.github.io/sizimi/style.css">
-  <link rel="icon" href="https://yosio11.github.io/sizimi/favicon.ico">
-  <link rel="apple-touch-icon" href="https://yosio11.github.io/sizimi/favicon.ico">
-  <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-  <script src="https://yosio11.github.io/sizimi-Template/script.js" type="text/javascript"></script>
-  <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sizimi連合公式サイト</title>
+    <link rel="stylesheet" href="https://yosio11.github.io/sizimi/style.css">
+    <link rel="icon" href="https://yosio11.github.io/sizimi/favicon.ico">
+    <link rel="apple-touch-icon" href="https://yosio11.github.io/sizimi/favicon.ico">
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://yosio11.github.io/sizimi-Template/script.js" type="text/javascript"></script>
+    <script src="https://embed.small.chat/T03DNHN2ERZC03ECAF0D7S.js" async></script>
 </head>
 
 <body>
-  <div class="bg"></div>
-  <div class="bg bg2"></div>
-  <div class="bg bg3"></div>
-  <div class="st">
-    <table>
-      <tr>
-        <td><img src="https://yosio11.github.io/sizimi/sizimi2.png" alt="しじみのロゴ" title="ロゴマーク"></td>
-        <td>
-          <h1>sizimi連合公式webサイト-Home</h1>
-        </td>
-      </tr>
-    </table>
-  </div>
-  <body>
-    <div id="cover">
-      <div id="section1"></div>
-      <div id="section2"></div>
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class="st">
+        <table>
+            <tr>
+                <td><img src="https://yosio11.github.io/sizimi/sizimi2.png" alt="しじみのロゴ" title="ロゴマーク"></td>
+                <td>
+                    <h1>sizimi連合公式webサイト-Home</h1>
+                </td>
+            </tr>
+        </table>
     </div>
-  </body>
-  <div class="contents">
-    <h1>sizimi連合公式webサイトへようこそ！</h1>
-    <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
-    <h3>更新情報</h3>
-    <p>2022/05/19　上のsizimi連合関連のリンクを一括編集できるようになりました！</p>
-    <p>2022/05/04　sizimi連合関連のリンクが上にも追加しました！</p>
-    <p>2022/05/03　sizimi連合公式webサイトのデザインが真ん中寄りになりました！</p>
-    <p>2022/05/02　googleサイト版 sizimi連合公式webサイト、開設いたしました！</p>
-    <p>2022/05/02　sizimi連合へのご意見、ご質問、ご要望等を承ることができるようになりました！</p>
-    <p>2022/05/01　sizimi連合公式webサイトのデザインが大きく変わりました！</p>
-    <p>2022/04/30　アクセスしているあなたの端末情報がわかるようになりました！</p>
-    <p>2022/04/25　アクセスした日付と時間がわかるようになりました！</p>
-    <p>2022/04/24　sizimi連合の規約書を公開しました！</p>
-    <p>2022/04/19　sizimi連合の本部のロゴを追加しました！</p>
-    <P>2022/04/18　この度、sizimi連合の公式webサイト、開設いたしました！</P>
-    <img src="https://yosio11.github.io/sizimi/sizimi.png" alt="しじみのロゴ" title="ロゴマーク">
-    <h3>sizimi連合の規約書はこちら↓（必ず読んで下さい）</h3>
-    <p>sizimi連合規約書</p>
-    <a href="https://yosio11.github.io/sizimi-Terms-of-use/">https://yosio11.github.io/sizimi-Terms-of-use/</a>
-    <h3>googleサイト版 sizimi連合公式webサイトはこちらから！</h3>
-    <p>googleサイト版 sizimi連合公式webサイト</p>
-    <a
-      href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0</a>
-    <h3>sizimi連合関連のURLです。</h3>
-    <p>sizimi連合本部のgoogle Drive</p>
-    <a
-      href="https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV">https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV</a>
-    <p>sizimi連合のgoogle classroom</p>
-    <a href="https://classroom.google.com/c/NDY5Nzk2NDI4NDM2">https://classroom.google.com/c/NDY5Nzk2NDI4NDM2</a>
-    <p>sizimi連合のgoogle meet</p>
-    <a href="https://meet.google.com/pxu-awjq-dew">https://meet.google.com/pxu-awjq-dew</a>
-    <p>sizimi連合チャットルーム</p>
-    <a
-      href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA</a>
-    <h3>このサイトにアクセスした日付と時間です。</h3>
-    <script>//今日の日付データを変数に格納
-      //変数は"today"とする
-      var today = new Date();
 
-      //年・月・日・曜日を取得
-      var year = today.getFullYear();
-      var month = today.getMonth() + 1;
-      var week = today.getDay();
-      var day = today.getDate();
+    <body>
+        <div id="cover">
+            <div id="section1"></div>
+            <div id="section2"></div>
+        </div>
+    </body>
+    <div class="contents">
+        <h1>sizimi連合公式webサイトへようこそ！</h1>
+        <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
+        <h3>更新情報</h3>
+        <p>2022/05/20  sizimiのロゴマークデザインを追加しました！</p>
+        <p>2022/05/19　上のsizimi連合関連のリンクを一括編集できるようになりました！</p>
+        <p>2022/05/04　sizimi連合関連のリンクが上にも追加しました！</p>
+        <p>2022/05/03　sizimi連合公式webサイトのデザインが真ん中寄りになりました！</p>
+        <p>2022/05/02　googleサイト版 sizimi連合公式webサイト、開設いたしました！</p>
+        <p>2022/05/02　sizimi連合へのご意見、ご質問、ご要望等を承ることができるようになりました！</p>
+        <p>2022/05/01　sizimi連合公式webサイトのデザインが大きく変わりました！</p>
+        <p>2022/04/30　アクセスしているあなたの端末情報がわかるようになりました！</p>
+        <p>2022/04/25　アクセスした日付と時間がわかるようになりました！</p>
+        <p>2022/04/24　sizimi連合の規約書を公開しました！</p>
+        <p>2022/04/19　sizimi連合の本部のロゴを追加しました！</p>
+        <P>2022/04/18　この度、sizimi連合の公式webサイト、開設いたしました！</P>
+        <h3>sizimi連合からのお知らせ</h3>
+        <p>このwebサイトの正常な動作のために、サイトの設定で[javascript]を[許可]にしてください</p>
+        <h3>ロゴマークデザイン</h3>
+        <table>
+            <tr>
+                <td><img src="https://yosio11.github.io/sizimi/sizimi.png" alt="しじみのロゴ" title="ロゴマーク"></td>
+                <td><img src="https://yosio11.github.io/sizimi/sizimi2.jpg" alt="しじみのロゴ２" title="ロゴマーク２"></td>
+            </tr>
+        </table>
+        <h3>sizimi連合の規約書はこちら↓（必ず読んで下さい）</h3>
+        <p>sizimi連合規約書</p>
+        <a href="https://yosio11.github.io/sizimi-Terms-of-use/">https://yosio11.github.io/sizimi-Terms-of-use/</a>
+        <h3>googleサイト版 sizimi連合公式webサイトはこちらから！</h3>
+        <p>googleサイト版 sizimi連合公式webサイト</p>
+        <a
+            href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0</a>
+        <h3>sizimi連合関連のURLです。</h3>
+        <p>sizimi連合本部のgoogle Drive</p>
+        <a
+            href="https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV">https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV</a>
+        <p>sizimi連合のgoogle classroom</p>
+        <a href="https://classroom.google.com/c/NDY5Nzk2NDI4NDM2">https://classroom.google.com/c/NDY5Nzk2NDI4NDM2</a>
+        <p>sizimi連合のgoogle meet</p>
+        <a href="https://meet.google.com/pxu-awjq-dew">https://meet.google.com/pxu-awjq-dew</a>
+        <p>sizimi連合チャットルーム</p>
+        <a
+            href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA</a>
+        <h3>このサイトにアクセスした日付と時間です。</h3>
+        <script>//今日の日付データを変数に格納
+            //変数は"today"とする
+            var today = new Date();
 
-      var week_ja = new Array("日", "月", "火", "水", "木", "金", "土");
+            //年・月・日・曜日を取得
+            var year = today.getFullYear();
+            var month = today.getMonth() + 1;
+            var week = today.getDay();
+            var day = today.getDate();
 
-      //年・月・日・曜日を書き出す
-      document.write(year + "年" + month + "月" + day + "日 " + week_ja[week] + "曜日");</script>
-    <script>//時刻データを取得して変数に格納する
-      //変数は"time"とする
-      var time = new Date();
+            var week_ja = new Array("日", "月", "火", "水", "木", "金", "土");
 
-      //時・分・秒を取得
-      var hour = time.getHours();
-      var minute = time.getMinutes();
-      var second = time.getSeconds();
+            //年・月・日・曜日を書き出す
+            document.write(year + "年" + month + "月" + day + "日 " + week_ja[week] + "曜日");</script>
+        <script>//時刻データを取得して変数に格納する
+            //変数は"time"とする
+            var time = new Date();
 
-      document.write(hour + "時", +minute + "分" + second + "秒");</script>
-    <h3>このサイトにアクセスしているあなたの端末情報です。（誰でも開示しているよ）</h3>
-    <script>
-      //端末情報の取得のエリアです
-      var a = location.pathname
-      var b = location.appCodeName
-      var c = navigator.appName
-      var d = navigator.appVersion
-      var e = navigator.language
-      var f = navigator.platform
-      var g = navigator.userAgent
-      document.write("ページURLのパス:" + a);
+            //時・分・秒を取得
+            var hour = time.getHours();
+            var minute = time.getMinutes();
+            var second = time.getSeconds();
+
+            document.write(hour + "時", +minute + "分" + second + "秒");</script>
+        <h3>このサイトにアクセスしているあなたの端末情報です。（誰でも開示しているよ）</h3>
+        <script>
+            //端末情報の取得のエリアです
+            var a = location.pathname
+            var b = location.appCodeName
+            var c = navigator.appName
+            var d = navigator.appVersion
+            var e = navigator.language
+            var f = navigator.platform
+            var g = navigator.userAgent
+            document.write("ページURLのパス:" + a);
             //ここからは、改行のために<script>が沢山あります
-    </script>
-    <br>
-    <script>document.write("ブラウザのコードネーム:" + b);</script>
-    <br>
-    <script>document.write("ブラウザ名:" + c);</script>
-    <br>
-    <script>document.write("ブラウザのバージョン:" + d);</script>
-    <br>
-    <script>document.write("ブラウザの使用言語:" + e);</script>
-    <br>
-    <script>document.write("ブラウザのプラットフォーム:" + f);</script>
-    <br>
-    <script>document.write("ブラウザのユーザーエージェント:" + g);
+        </script>
+        <br>
+        <script>document.write("ブラウザのコードネーム:" + b);</script>
+        <br>
+        <script>document.write("ブラウザ名:" + c);</script>
+        <br>
+        <script>document.write("ブラウザのバージョン:" + d);</script>
+        <br>
+        <script>document.write("ブラウザの使用言語:" + e);</script>
+        <br>
+        <script>document.write("ブラウザのプラットフォーム:" + f);</script>
+        <br>
+        <script>document.write("ブラウザのユーザーエージェント:" + g);
         //結構強引でしょ
-    </script>
-    <br>
-    <h3>sizimi連合へのご意見、ご質問、ご要望等は右下で承ります</h3>
-    <p>Smallchatというチャットシステムを用いて直接制作者とご意見、ご質問、ご要望等を</p>
-    <p>直接承ることができるようになりました！</p>
-    <p>ぜひご利用ください！</p>
-    <h4>作　佐野 舜</h4>
-  </div>
+        </script>
+        <br>
+        <h3>sizimi連合へのご意見、ご質問、ご要望等は右下で承ります</h3>
+        <p>Smallchatというチャットシステムを用いて直接制作者とご意見、ご質問、ご要望等を</p>
+        <p>直接承ることができるようになりました！</p>
+        <p>ぜひご利用ください！</p>
+        <h4>作　佐野 舜</h4>
+    </div>
 </body>
 
 </html>
