--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <p>Smallchatというチャットシステムを用いて直接制作者とご意見、ご質問、ご要望等を</p>
         <p>直接承ることができるようになりました！</p>
         <p>ぜひご利用ください！</p>
-        <h4>作　佐野 舜</h4>
+        <h4>作　yosio11</h4>
     </div>
 </body>
 
