--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
         <h3>更新情報</h3>
+        <p>2022/11/14　関連サイトへのリンク等を追加したしました！<p>
         <p>2022/05/20  sizimiのロゴマークデザインを追加しました！</p>
         <p>2022/05/19　上のsizimi連合関連のリンクを一括編集できるようになりました！</p>
         <p>2022/05/04　sizimi連合関連のリンクが上にも追加しました！</p>
@@ -134,7 +135,7 @@
         <p>Smallchatというチャットシステムを用いて直接制作者とご意見、ご質問、ご要望等を</p>
         <p>直接承ることができるようになりました！</p>
         <p>ぜひご利用ください！</p>
-        <h4>作　yosio11</h4>
+        <h4>制作　yosio11</h4>
     </div>
 </body>
 
