--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </body>
     <div class="contents">
         <h1>sizimi連合公式webサイトへようこそ！</h1>
-        <h2>このサイトでは、sizimi同盟の様々な情報を載せていきます！</h2>
+        <h2>このサイトでは、sizimi連合の様々な情報を載せていきます！</h2>
         <h3>更新情報</h3>
         <p>2022/11/14　関連サイトへのリンク等を追加したしました！<p>
         <p>2022/05/20  sizimiのロゴマークデザインを追加しました！</p>
