--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
         <a
             href="https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0">https://sites.google.com/view/sizimi/%E3%83%9B%E3%83%BC%E3%83%A0</a>
         <h3>sizimi連合関連のURLです。</h3>
-        <p>sizimi連合本部のgoogle Drive</p>
+        <p>sizimi連合のgoogle Drive</p>
         <a
-            href="https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV">https://drive.google.com/drive/folders/19zw1Oxf1SHmEBL2WRxfJ_WDnMICzMczV</a>
-        <p>sizimi連合のgoogle classroom</p>
-        <a href="https://classroom.google.com/c/NDY5Nzk2NDI4NDM2">https://classroom.google.com/c/NDY5Nzk2NDI4NDM2</a>
-        <p>sizimi連合のgoogle meet</p>
-        <a href="https://meet.google.com/pxu-awjq-dew">https://meet.google.com/pxu-awjq-dew</a>
-        <p>sizimi連合チャットルーム</p>
+            href="https://drive.google.com/drive/folders/1WLoS0PNCSFqMXzemr6NazECS-C30ZPeP">https://drive.google.com/drive/folders/1WLoS0PNCSFqMXzemr6NazECS-C30ZPeP</a>
+        <p>sizimi連合のオープンチャット</p>
+        <a href="https://line.me/ti/g2/O0bAupzhYpvpfmJ8fY6fmSHHtA8NWncevlg_Tg?utm_source=invitation&utm_medium=link_copy&utm_campaign=default">こちらからどうぞ</a>
+        <p>sizimi連合のyoutubeチャンネル</p>
+        <a href="https://www.youtube.com/@sizimi_union_">https://www.youtube.com/@sizimi_union_</a>
+        <p>sizimi連合の広報部</p>
         <a
-            href="https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA">https://mail.google.com/chat/u/0/#chat/space/AAAAaklH1lA</a>
+            href="https://twitter.com/sizimi_union">https://twitter.com/sizimi_union</a>
         <h3>このサイトにアクセスした日付と時間です。</h3>
         <script>//今日の日付データを変数に格納
             //変数は"today"とする
@@ -132,7 +132,7 @@
         <p>Smallchatというチャットシステムを用いて直接制作者とご意見、ご質問、ご要望等を</p>
         <p>直接承ることができるようになりました！</p>
         <p>ぜひご利用ください！</p>
-        <h4>制作　yosio11</h4>
+        <h4>制作　yosio11(Mr.sizimi)</h4>
     </div>
 </body>
 
