--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <h1>sizimi連合公式webサイトへようこそ！</h1>
         <h2>このサイトでは、sizimi連合の様々な情報を載せていきます！</h2>
         <h3>更新情報</h3>
-        <p>2022/11/14　関連サイトへのリンク等を追加したしました！<p>
+        <p>2023/04/01　宛先リンク等を変更いたしました！<p>
+        <p>2022/11/14　関連サイトへのリンク等を追加しました！<p>
         <p>2022/05/20  sizimiのロゴマークデザインを追加しました！</p>
         <p>2022/05/19　上のsizimi連合関連のリンクを一括編集できるようになりました！</p>
         <p>2022/05/04　sizimi連合関連のリンクが上にも追加しました！</p>
